--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ultimate  personal website</title>
+    <title>ultimate React personal website</title>
 </head>
 <body>
-    
+    <div id="root">
+    </div>
 </body>
 </html>
